<resources>
    <string name="app_name">MovieKotlinApp</string>
    <string name="movie_app">Movie App</string>
    <string name="back">Back</string>
    <string name="title_hint">Title</string>
    <string name="released_date_hint">Released date</string>
    <string name="rating_hint">Rating</string>
    <string name="movie_image_poster_hint">Movie Image Poster</string>
    <string name="movie_image_backdrop_hint">Movie Image Backdrop</string>
    <string name="plot_hint">Plot</string>
    <string name="add_movie_hint">Add Movie</string>
</resources>